--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-utc: “"2020-10-5 6:00:00 +0400"” #Required. The start time of the event. Best to use UTC format, but may work in other date formats too.
+utc: “2020-10-5 6:00:00 +0400” #Required. The start time of the event. Best to use UTC format, but may work in other date formats too.
 name: "2020 CyberSEEC (Cyber Security Exercises for Electric Communities)" #Required. The human-readable name of the event
 logo: "https://raw.githubusercontent.com/CyberSEEC/test/main/assets/img/CyberSEEC-logo.png" #Required. logo for the event. replace this logo in the project or add a new file and change the value of this variable
 description: "My event will be so awesome. Check this
