--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ name: "2020 CyberSEEC
 logo: "https://raw.githubusercontent.com/CyberSEEC/test/main/assets/img/CyberSEEC-logo.png" #Required. logo for the event. replace this logo in the project or add a new file and change the value of this variable
 description: "CyberSEEC will be a great event"
 site to see how much longer is left until. Get excited!" #Required. short description of the event. this is used in the preview when the link is shared on facebook
-externalLink: "CyberSEEC.com" #Required. link to the main event page. this could be a webpage, a facebook event, an eventbrite page, where ever the main webpage is for your event
+externalLink: "https://www.cooperative.com/conferences-education/web-based-learning/2020-cyberseec/Pages/default.aspx" #Required. link to the main event page. this could be a webpage, a facebook event, an eventbrite page, where ever the main webpage is for your event
 url: "http://countdown.yourdomain.com" #(Optional) the full URL for this countdown page. This is neccesary for facebook share previews
 facebookEventLink: #(Optional) if you have a facebook event, put the link here and we'll add a "RSVP on facebook" link at the bottom.
 hashtag: "" #(Optional) hashtag for the event, example "#hashtag". must be in quotes.
