--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ utc: “2020-10-29 6:00:00 -0500” #Required. The start time of the event. Best
 name: "CyberSEEC
 (Cyber Security Exercises for Electric Communities)" #Required. The human-readable name of the event
 logo: "https://raw.githubusercontent.com/CyberSEEC/test/main/assets/img/CyberSEEC-logo.png" #Required. logo for the event. replace this logo in the project or add a new file and change the value of this variable
-description: "CyberSEEC will be a great event"
-site to see how much longer is left until. Get excited!" #Required. short description of the event. this is used in the preview when the link is shared on facebook
+description: "CyberSEEC will be a great event. Get excited!" #Required. short description of the event. this is used in the preview when the link is shared on facebook
 externalLink: "https://www.cooperative.com/conferences-education/web-based-learning/2020-cyberseec/Pages/default.aspx" #Required. link to the main event page. this could be a webpage, a facebook event, an eventbrite page, where ever the main webpage is for your event
 url: "http://countdown.yourdomain.com" #(Optional) the full URL for this countdown page. This is neccesary for facebook share previews
 facebookEventLink: #(Optional) if you have a facebook event, put the link here and we'll add a "RSVP on facebook" link at the bottom.
